2009-01-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mail/rmail.el (rmail-write-region-annotate): Only switch buffer if
	start is nil, as was done in tar-mode.el.

2009-01-23  Glenn Morris  <rgm@gnu.org>

	* mail/sendmail.el (mail-bury): Revert previous change now pmail is no
	more.

	* mail/uce.el (rmail-msg-is-pruned): Remove declaration of deleted func.

2009-01-23  Chong Yidong  <cyd@stupidchicken.com>

	* server.el (server-name): Make it a defcustom.

	* mail/rmail.el (rmail-buffer-swapped): Mark as permanent local.

2009-01-23  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (ELCFILES): Update.

2009-01-22  Ulf Jasper  <ulf.jasper@web.de>

	* net/newst-treeview.el
	(newsticker-treeview-next-new-or-immortal-item): New optional arg
	current-item-counts.  Move to next feed if necessary.  (Bug#1569)
	(newsticker-treeview-prev-new-or-immortal-item): Move to previous
	feed if necessary.  (Bug#1569)
	(newsticker-treeview-next-feed)
	(newsticker-treeview-prev-feed): New optional arg stay-in-tree.
	Don't activate node nil.  (Bug#1569)

2009-01-22  Paul Reilly  <pmr@pajato.com>
	    Henrik Enberg  <enberg@printf.se>
	    Alex Schroeder  <alex@gnu.org>
	    Chong Yidong  <cyd@stupidchicken.com>
	    Richard M Stallman  <rms@gnu.org>
	    Glenn Morris  <rgm@gnu.org>
	    Juanma Barranquero  <lekktu@gmail.com>

	* mail/rmail.el: Code implementing Rmail-mbox functionality.
	(rmail-attribute-header, rmail-keyword-header)
	(rmail-answered-attr-index, rmail-deleted-attr-index)
	(rmail-edited-attr-index, rmail-filed-attr-index)
	(rmail-retried-attr-index, rmail-forwarded-attr-index)
	(rmail-unseen-attr-index, rmail-resent-attr-index)
	(rmail-attr-array, rmail-header-style, rmail-file-name)
	(rmail-buffer-swapped): New vars.
	(rmail-convert-file-maybe, rmail-error-bad-format)
	(rmail-convert-babyl-to-mbox, rmail-get-coding-system)
	(rmail-generate-viewer-buffer, rmail-change-major-mode-hook)
	(rmail-buffers-swapped-p, rmail-swap-buffers-maybe)